Рефакторинг функции filterPasswords